// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SearchIcon [common] example testing should match snapshot(s) for 1.default 1`] = `
<Icon
  aspectRatio="xMidYMid meet"
  className="lucid-SearchIcon"
  isBadge={false}
  isDisabled={false}
  size={16}
  viewBox="0 0 16 16"
>
  <path
    d="M14.309,12.893L10.87,9.455c0.571-0.844,0.905-1.86,0.905-2.955c0-2.913-2.362-5.274-5.274-5.274S1.226,3.587,1.226,6.5 s2.362,5.273,5.274,5.273c1.095,0,2.111-0.334,2.955-0.904l3.439,3.438c0.391,0.392,1.023,0.392,1.414,0 C14.699,13.917,14.699,13.283,14.309,12.893z M2.424,6.5c0-2.247,1.829-4.076,4.076-4.076s4.076,1.829,4.076,4.076 S8.747,10.576,6.5,10.576S2.424,8.747,2.424,6.5z"
  />
</Icon>
`;

exports[`SearchIcon [common] example testing should match snapshot(s) for 1.default 2`] = `
<Icon
  aspectRatio="xMidYMid meet"
  className="lucid-SearchIcon"
  isBadge={true}
  isDisabled={false}
  size={16}
  viewBox="0 0 16 16"
>
  <path
    d="M14.309,12.893L10.87,9.455c0.571-0.844,0.905-1.86,0.905-2.955c0-2.913-2.362-5.274-5.274-5.274S1.226,3.587,1.226,6.5 s2.362,5.273,5.274,5.273c1.095,0,2.111-0.334,2.955-0.904l3.439,3.438c0.391,0.392,1.023,0.392,1.414,0 C14.699,13.917,14.699,13.283,14.309,12.893z M2.424,6.5c0-2.247,1.829-4.076,4.076-4.076s4.076,1.829,4.076,4.076 S8.747,10.576,6.5,10.576S2.424,8.747,2.424,6.5z"
  />
</Icon>
`;

exports[`SearchIcon [common] example testing should match snapshot(s) for 2.clickable 1`] = `
<Icon
  aspectRatio="xMidYMid meet"
  className="lucid-SearchIcon"
  isBadge={false}
  isClickable={true}
  isDisabled={false}
  size={16}
  viewBox="0 0 16 16"
>
  <path
    d="M14.309,12.893L10.87,9.455c0.571-0.844,0.905-1.86,0.905-2.955c0-2.913-2.362-5.274-5.274-5.274S1.226,3.587,1.226,6.5 s2.362,5.273,5.274,5.273c1.095,0,2.111-0.334,2.955-0.904l3.439,3.438c0.391,0.392,1.023,0.392,1.414,0 C14.699,13.917,14.699,13.283,14.309,12.893z M2.424,6.5c0-2.247,1.829-4.076,4.076-4.076s4.076,1.829,4.076,4.076 S8.747,10.576,6.5,10.576S2.424,8.747,2.424,6.5z"
  />
</Icon>
`;

exports[`SearchIcon [common] example testing should match snapshot(s) for 2.clickable 2`] = `
<Icon
  aspectRatio="xMidYMid meet"
  className="lucid-SearchIcon"
  isBadge={true}
  isClickable={true}
  isDisabled={false}
  size={16}
  viewBox="0 0 16 16"
>
  <path
    d="M14.309,12.893L10.87,9.455c0.571-0.844,0.905-1.86,0.905-2.955c0-2.913-2.362-5.274-5.274-5.274S1.226,3.587,1.226,6.5 s2.362,5.273,5.274,5.273c1.095,0,2.111-0.334,2.955-0.904l3.439,3.438c0.391,0.392,1.023,0.392,1.414,0 C14.699,13.917,14.699,13.283,14.309,12.893z M2.424,6.5c0-2.247,1.829-4.076,4.076-4.076s4.076,1.829,4.076,4.076 S8.747,10.576,6.5,10.576S2.424,8.747,2.424,6.5z"
  />
</Icon>
`;

exports[`SearchIcon [common] example testing should match snapshot(s) for 3.disabled 1`] = `
<Icon
  aspectRatio="xMidYMid meet"
  className="lucid-SearchIcon"
  isBadge={false}
  isDisabled={true}
  size={16}
  viewBox="0 0 16 16"
>
  <path
    d="M14.309,12.893L10.87,9.455c0.571-0.844,0.905-1.86,0.905-2.955c0-2.913-2.362-5.274-5.274-5.274S1.226,3.587,1.226,6.5 s2.362,5.273,5.274,5.273c1.095,0,2.111-0.334,2.955-0.904l3.439,3.438c0.391,0.392,1.023,0.392,1.414,0 C14.699,13.917,14.699,13.283,14.309,12.893z M2.424,6.5c0-2.247,1.829-4.076,4.076-4.076s4.076,1.829,4.076,4.076 S8.747,10.576,6.5,10.576S2.424,8.747,2.424,6.5z"
  />
</Icon>
`;

exports[`SearchIcon [common] example testing should match snapshot(s) for 3.disabled 2`] = `
<Icon
  aspectRatio="xMidYMid meet"
  className="lucid-SearchIcon"
  isBadge={true}
  isDisabled={true}
  size={16}
  viewBox="0 0 16 16"
>
  <path
    d="M14.309,12.893L10.87,9.455c0.571-0.844,0.905-1.86,0.905-2.955c0-2.913-2.362-5.274-5.274-5.274S1.226,3.587,1.226,6.5 s2.362,5.273,5.274,5.273c1.095,0,2.111-0.334,2.955-0.904l3.439,3.438c0.391,0.392,1.023,0.392,1.414,0 C14.699,13.917,14.699,13.283,14.309,12.893z M2.424,6.5c0-2.247,1.829-4.076,4.076-4.076s4.076,1.829,4.076,4.076 S8.747,10.576,6.5,10.576S2.424,8.747,2.424,6.5z"
  />
</Icon>
`;
